Fixed Spacing

--- a/client/stylesheets/weather_form_box.css
+++ b/client/stylesheets/weather_form_box.css
@@ -7,10 +7,6 @@
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-.weather-form{
-
-}
-
 .title{
   font-size: 30px;
 }
